--- a/style-home.css
+++ b/style-home.css
@@ -1,3 +1,5 @@
+/* codigo en desuso ------------
+
 .tituloprincipal {
     padding-left: 30px;
 }
@@ -49,3 +51,6 @@
 .imgdiferenciales{
     width: 50%;
 }
+
+
+*/
